<?xml version="1.0"?>
<package>
  <name>alica_asp_solver</name>
  <version>0.0.1</version>
  <description>The alica_asp_solver package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>alica_engine</build_depend>
  <build_depend>clingo_cpp</build_depend>
  <build_depend>system_config</build_depend>
  <build_depend>fsystem</build_depend>

  <run_depend>alica_engine</run_depend>
  <run_depend>clingo_cpp</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>fsystem</run_depend>

  <export>
  </export>
</package>