<?xml version="1.0"?>
<package>
  <name>alica_asp_test</name>
  <version>0.0.0</version>
  <description>The alica_asp_test package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cling_wrap</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>alica_dummy_proxy</build_depend>
   
  <run_depend>cling_wrap</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>alica_dummy_proxy</run_depend>

  <export>
  </export>
</package>