<?xml version="1.0"?>
<package>
  <name>alica_asp_test</name>
  <version>0.0.0</version>
  <description>The alica_asp_test package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <author email="opfer@vs.uni-kassel.de">Stephan Opfer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>clingo</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>alica_engine</build_depend>
  <build_depend>alica_dummy_proxy</build_depend>
  <build_depend>alica_asp_solver</build_depend>
  <build_depend>asp_commons</build_depend>
  <build_depend>asp_solver_wrapper</build_depend>
  <build_depend>asp_solver</build_depend>
   
  <run_depend>asp_solver</run_depend>
  <run_depend>asp_commons</run_depend>
  <run_depend>asp_solver_wrapper</run_depend>
  <run_depend>clingo</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>alica_engine</run_depend>
  <run_depend>alica_dummy_proxy</run_depend>
  <run_depend>alica_asp_solver</run_depend>

  <export>
  </export>
</package>
