<?xml version="1.0"?>
<package format="2">
  <name>asp_solver</name>
  <version>0.0.0</version>
  <description>The asp_solver package</description>

  <maintainer email="s.jakob872@gmail.com">Stefan Jakob</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>system_config</depend>
  <depend>system_util</depend>
  <depend>fsystem</depend>

  <export>
  </export>

</package>
