<?xml version="1.0"?>
<package>
  <name>asp_solver_wrapper</name>
  <version>0.0.0</version>
  <description>The asp_solver_wrapper package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="s.jakob872@gmail.com">Stefan Jakob</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>alica_engine</build_depend>
  
  <run_depend>alica_engine</run_depend>


  <export>
  </export>
</package>