<?xml version="1.0"?>
<package format="2">
  <name>asp_solver_wrapper</name>
  <version>0.0.0</version>
  <description>The asp_solver_wrapper package</description>

  <maintainer email="s.jakob872@gmail.com">Stefan Jakob</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>alica_engine</depend>
  <depend>asp_solver</depend>
  <depend>system_util</depend>

  <export>
  </export>
</package>