<?xml version="1.0"?>
<package>
  <name>discovery</name>
  <version>0.0.0</version>
  <description>The discovery package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>
  
  <build_depend>event_handling</build_depend>
  
  <run_depend>event_handling</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
