<?xml version="1.0"?>
<package format="2">
  <name>external_eval</name>
  <version>0.0.0</version>
  <description>The srg_base package</description>

  <maintainer email="jakob@vs.uni-kassel.de">Stefan Jakob</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
