<?xml version="1.0"?>
<package format="2">
  <name>knowledgebase_creator</name>
  <version>0.0.0</version>
  <description>The KnowledgebaseCreator package</description>
  <maintainer email="s.jakob872@gmail.com">Stefan Jakob</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qt_gui</depend>
  <depend>asp_solver</depend>


  <export>
  </export>
</package>
